--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -7,8 +7,8 @@
         android:id="@+id/frameLayout"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp">
         <ImageView
             android:id="@+id/picture"
             android:layout_width="match_parent"
@@ -27,17 +27,17 @@
         android:id="@+id/id"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
         android:layout_toRightOf="@id/frameLayout"
-        android:layout_centerVertical="true" />
+        android:textAppearance="?attr/textAppearanceListItem" />
 
     <TextView
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
         android:layout_toRightOf="@id/id"
-        android:layout_centerVertical="true" />
+        android:textAppearance="?attr/textAppearanceListItem" />
 </RelativeLayout>
